--- a/ballou2406/index.html
+++ b/ballou2406/index.html
@@ -41,5 +41,8 @@
 			<a href="project2-part3/project2-part3.html">Project 2 - Part 3</a>
 		</section>
 	</nav>
+	<footer>
+		<h3> Make-up Reading: <a href="https://bit.ly/3L5ESnq">bit.ly/3L5ESnq</a> </h3>
+	</footer>
 </body>
 </html>
