--- a/ballou2406/index.html
+++ b/ballou2406/index.html
@@ -24,6 +24,7 @@
 			<a href="warm-ups/warmup2.png">Warm Up 2</a>
 			<a href="warm-ups/warmup3.png">Warm Up 3</a>
 			<a href="warm-ups/warmup4.png">Warm Up 4</a>
+			<a href="warm-ups/warmup5.png">Warm Up 5</a>
 		</section>
 
 		<section>
